--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ProjectManager</title>
     <link rel="stylesheet" href="app.css" />
     <script type="module" src="dist/bundle.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
   </head>
   <body>
     <template id="project-input">
